--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     hooks:
       - id: validate-branch-name
         name: Validating Branch Name
-        entry: .git/hooks/validate-branch-name
+        entry: pre-commit-hooks/validate-branch-name
         language: script
         stages: [pre-commit, post-checkout]
   # RUFF
