--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,5 +1,5 @@
 - id: validate-branch-name
   name: Validating Branch Name
-  entry: .git/hooks/validate-branch-name
+  entry: pre-commit-hooks/validate-branch-name
   language: script
   stages: [pre-commit, post-checkout]
