--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,8 @@ repos:
       - id: no-commit-to-branch
         name: Preventing commits to main branch
         args: ['--branch', 'main']
-  # VALIDATE-BRANCH-NAME
+
+  # VALIDATE BRANCH NAME
   - repo: local
     hooks:
       - id: validate-branch-name
@@ -18,7 +19,16 @@ repos:
         entry: pre-commit-hooks/validate-branch-name
         language: script
         stages: [pre-commit, post-checkout]
-  # RUFF
+
+  # ADD ISSUE NUMBER TO COMMIT
+  - repo: https://gitlab.com/codementors/pre-commit/add-issue-number-to-conventional-commit
+    rev: 1.0.2
+    hooks:
+      - id: add-issue-number
+        name: Adding issue number to commit message
+        stages: [commit-msg]
+
+  # LINTING & FORMATTING PYTHON
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.3.7
     hooks:
@@ -30,14 +40,14 @@ repos:
         name: Formatting python code
         types: [python]
 
-  # ISORT
+  # SORTING PYTHON IMPORTS
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
         name: Sorting python imports
 
-  # MYPY
+  # TYPE CHECKING PYTHON
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.9.0
     hooks:
@@ -47,19 +57,19 @@ repos:
         additional_dependencies:
           [django-stubs, djangorestframework-stubs]
 
-  # BANDIT
+  # CHECKING FOR PYTHON SECURITY ISSUES
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.8
     hooks:
       - id: bandit
         name: Checking for python security issues
 
-  # PRETTIER
+  # FORMATTING FRONT-END CODE
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
-        name: Formatting frontend code
+        name: Formatting front-end code
         args:
           [
             '--tab-width',
