--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,7 @@
+default_install_hook_types:
+  - pre-commit
+  - prepare-commit-msg
+
 repos:
   # BUILT-IN HOOKS
   - repo: https://github.com/pre-commit/pre-commit-hooks
