[#11] Fixed ESlint script ; Added eslint pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,6 +46,16 @@ repos:
         types: [python]
         stages: [pre-commit]
 
+  # LINTING FRONTEND
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: v9.1.1
+    hooks:
+      - id: eslint
+        name: Linting front-end code
+        stages: [pre-commit]
+        additional_dependencies: ['@next/eslint-plugin-next']
+        files: \.[jt]sx?$
+
   # SORTING PYTHON IMPORTS
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
