[#28] added files prettier pre-commit option; updated validate-branch-name to include main & develop

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -90,6 +90,7 @@ repos:
       - id: prettier
         name: Formatting front-end code (re-commit if fails)
         stages: [pre-commit]
+        files: "\\.(tsx?|css|scss|json)$"
         args:
           [
             '--tab-width',
