[#28] Also fixing ESLint pre-commit along the way

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -24,5 +24,9 @@
   },
 
   // Needed for typescript support
-  "parser": "@babel/eslint-parser"
+  "parser": "@babel/eslint-parser",
+  // Needed to prevent ESLint from looking for a configuration file in parent folders
+  "parserOptions": {
+    "requireConfigFile": false
+  }
 }
