--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -89,22 +89,6 @@ repos:
       - id: prettier
         # We are using bash -c to run the command in the frontend directory
         entry: bash -c 'cd frontend && npm run format'
-        name: Formatting front-end code
+        name: Formatting front-end code (re-commit if changes are made)
         language: system
         stages: [pre-commit]
-  # - repo: https://github.com/pre-commit/mirrors-prettier
-  #   rev: v4.0.0-alpha.8
-  #   hooks:
-  #     - id: prettier
-  #       name: Formatting front-end code
-  #       stages: [pre-commit]
-  #       args:
-  #         [
-  #           '--tab-width',
-  #           '2',
-  #           '--single-quote',
-  #           '--no-semi',
-  #           '--jsx-single-quote',
-  #           '--print-width',
-  #           '68',
-  #         ]
