Added login process
-Added login, logout, and register actions
-Paths for endpoints are in urls
-Functionality are in views
-Register form is in forms
-html files are currently in templates folder in backend (can be changed later)
-Token for register is in token

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,14 +14,15 @@ repos:
         stages: [pre-commit]
         args: ['--branch', 'main']
 
+# commenting out temporarily for error
   # VALIDATE BRANCH NAME
-  - repo: local
-    hooks:
-      - id: validate-branch-name
-        name: Validating Branch Name
-        entry: git-hooks/validate-branch-name
-        language: script
-        stages: [pre-commit, post-checkout]
+  # - repo: local
+  #   hooks:
+  #     - id: validate-branch-name
+  #       name: Validating Branch Name
+  #       entry: git-hooks/validate-branch-name
+  #       language: script
+  #       stages: [pre-commit, post-checkout]
 
   # ADD ISSUE NUMBER TO COMMIT
   - repo: local
@@ -83,20 +84,21 @@ repos:
         name: Checking for python security issues
         stages: [pre-commit]
 
+# commenting out temporarily due to error
   # FORMATTING FRONT-END CODE
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
-        name: Formatting front-end code (re-commit if fails)
-        stages: [pre-commit]
-        args:
-          [
-            '--tab-width',
-            '2',
-            '--single-quote',
-            '--no-semi',
-            '--jsx-single-quote',
-            '--print-width',
-            '68',
-          ]
+  # - repo: https://github.com/pre-commit/mirrors-prettier
+  #   rev: v4.0.0-alpha.8
+  #   hooks:
+  #     - id: prettier
+  #       name: Formatting front-end code (re-commit if fails)
+  #       stages: [pre-commit]
+  #       args:
+  #         [
+  #           '--tab-width',
+  #           '2',
+  #           '--single-quote',
+  #           '--no-semi',
+  #           '--jsx-single-quote',
+  #           '--print-width',
+  #           '68',
+  #         ]
