--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,5 @@ python-dotenv==1.0.1
 gunicorn==22.0.0
 uvicorn==0.29.0
 djangorestframework==3.15.1
+crispy-bootstrap4==2024.1
+django-crispy-forms==2.1
