[#32] Linting front-end pre-commit fix

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,32 +1,11 @@
 {
   "extends": [
-    /* 
-      Recommended rule set for Next.js:
-      (https://nextjs.org/docs/pages/building-your-application/configuring/eslint#eslint-config)
-    */
-    "plugin:@next/next/recommended", // Next.js recommended linting rules
-    "plugin:react/recommended", // React recommended linting rules
-    "plugin:react-hooks/recommended", // Rules: https://legacy.reactjs.org/docs/hooks-rules.html
-    "plugin:react/jsx-runtime", // Info: https://legacy.reactjs.org/blog/2020/09/22/introducing-the-new-jsx-transform.html
-
+    // Next.js core linting rules
+    "next/core-web-vitals",
     /*
       Turning off all linting rules that are unnecessary or might conflict with Prettier.
       (https://github.com/prettier/eslint-config-prettier)
     */
     "prettier"
-  ],
-
-  "settings": {
-    "react": {
-      // Specifying React version is necessary for eslint-plugin-react
-      "version": "detect"
-    }
-  },
-
-  // Needed for typescript support
-  "parserOptions": {
-    "requireConfigFile": false,
-    "sourceType": "module",
-    "ecmaVersion": "latest"
-  }
+  ]
 }
