--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
             '--pattern',
             '^(?!^(feat|fix|hotfix|release)\/[0-9]+_).*$',
           ]
-
+  
   # ADD ISSUE NUMBER TO COMMIT
   - repo: local
     hooks:
@@ -49,16 +49,17 @@ repos:
         name: Formatting python code
         types: [python]
         stages: [pre-commit]
-
-  # # LINTING FRONTEND
-  # - repo: local
-  #   hooks:
-  #     - id: eslint
-  #       # We are using bash -c to run the command in the frontend directory
-  #       entry: bash -c 'cd frontend && npm run lint'
-  #       name: ESLinting front-end code
-  #       language: system
-  #       stages: [pre-commit]
+  
+  # LINTING FRONTEND
+  - repo: local
+    hooks:
+      - id: build
+        # We are using bash -c to run the command in the frontend directory
+        entry: bash -c 'cd frontend && npx eslint . --plugin @next/eslint-plugin-next'
+        name: Building & ESLinting front-end code
+        language: system
+        stages: [pre-commit]
+        
 
   # SORTING PYTHON IMPORTS
   - repo: https://github.com/pycqa/isort
@@ -79,7 +80,7 @@ repos:
           # These depdendencies job is to provide type hints/checking for Django
           [django-stubs, djangorestframework-stubs]
         stages: [pre-commit]
-
+  
   # CHECKING FOR PYTHON SECURITY ISSUES
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.8
@@ -87,7 +88,7 @@ repos:
       - id: bandit
         name: Checking for python security issues
         stages: [pre-commit]
-
+  
   # FORMATTING FRONT-END CODE
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v4.0.0-alpha.8
