--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rebutify-fe",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,28 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.1",
-    "npm": "^10.5.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/eslint-parser": "^7.24.1",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.1",
-    "@babel/preset-env": "^7.24.5",
-    "@eslint/js": "^9.1.1",
-    "@next/eslint-plugin-next": "^14.2.3",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "globals": "^15.1.0",
-    "typescript": "^5",
-    "typescript-eslint": "^7.7.1"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "^9.1.0"
   }
 }
