installed djoser and simplejwt

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,5 @@ python-dotenv==1.0.1
 gunicorn==22.0.0
 uvicorn==0.29.0
 djangorestframework==3.15.1
+djoser==2.2.2
+djangorestframework_simplejwt==5.3.1
