--- a/.github/workflows/decision.yml
+++ b/.github/workflows/decision.yml
@@ -29,7 +29,7 @@ jobs:
           echo "Triggering user is unauthorized."
           exit 1
         fi
-    - name: Check out code
+    - name: Checkout
       uses: actions/checkout@v3
 
     - name: Extract subject and category from issue title
