--- a/.github/workflows/decision.yml
+++ b/.github/workflows/decision.yml
@@ -75,6 +75,6 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         commit-message: "Add documentation for decision: ${{ github.event.issue.title }}"
-        title: "Automated PR for issue ${{ github.event.issue.number }}"
+        title: "${{ github.event.issue.title }}"
         labels: "automerge"
         body: "This PR was automatically created to document the issue."
