Added django-cors-headers to requirements.txt

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,4 @@ djangorestframework==3.15.1
 crispy-bootstrap4==2024.1
 django-crispy-forms==2.1
 drf-spectacular==0.27.2
+django-cors-headers==4.3.1
