only trigger on backend changes

--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -1,5 +1,11 @@
 name: Backend CI
-on: [push, pull_request]
+on: 
+  push:
+    branches: ['main']
+    paths: ['backend/**']
+  pull_request:
+    branches: ['main']
+    paths: ['backend/**']
 
 jobs:
   test:
