fix: pass "branch" to create-pull-request action

--- a/.github/workflows/decision.yml
+++ b/.github/workflows/decision.yml
@@ -87,3 +87,4 @@ jobs:
           title: 'Automated PR ${{ github.event.issue.title }}'
           labels: 'documentation,decision'
           body: 'This PR was automatically created to document ${{ github.event.issue.number }}.'
+          branch: 'docs/${{ github.event.issue.number }}_decision-$subject'
