--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,6 +26,7 @@
       "@/*": ["./*"],
       "@/api": ["./_api/api"],
       "@/components/*": ["./_components/*"],
+      "@/store/*": ["../store/*"],
       "@/types/*": ["./_types/*"]
     }
   },
