--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,6 +25,7 @@
     "paths": {
       "@/*": ["./*"],
       "@/api": ["./_api/api"],
+      "@/helpers/*": ["./_helpers/*"],
       "@/components/*": ["./_components/*"],
       "@/store/*": ["../store/*"],
       "@/types/*": ["./_types/*"]
