fix: add input "base" to create PR action

--- a/.github/workflows/decision.yml
+++ b/.github/workflows/decision.yml
@@ -89,5 +89,6 @@ jobs:
           title: 'Automated PR ${{ github.event.issue.title }}'
           labels: 'documentation,decision'
           body: 'This PR was automatically created to document ${{ github.event.issue.number }}.'
+          base: 'main'
           branch: 'docs/${{ github.event.issue.number }}_decision-${{ steps.new_branch.outputs.subject }}'
           draft: true
