--- a/.github/workflows/decision.yml
+++ b/.github/workflows/decision.yml
@@ -32,8 +32,9 @@ jobs:
             exit 1
           fi
 
+      # Fetch the repository contents to ensure the latest code is available
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.7
 
       - name: Extract subject and category from issue title
         id: extract_info
@@ -82,13 +83,7 @@ jobs:
           echo "subject=$subject" >> $GITHUB_OUTPUT
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: 'Add documentation for decision: ${{ github.event.issue.title }}'
-          title: 'Automated PR ${{ github.event.issue.title }}'
-          labels: 'documentation,decision'
-          body: 'This PR was automatically created to document ${{ github.event.issue.number }}.'
-          base: 'main'
-          branch: 'docs/${{ github.event.issue.number }}_decision-${{ steps.new_branch.outputs.subject }}'
-          draft: true
+        run: |
+          gh pr create --base main --head 'docs/${{ github.event.issue.number }}_decision-${{ steps.new_branch.outputs.subject }}' --draft --label decision --label documentation --title "Add documentation for decision: ${{ github.event.issue.title }}" --body "Created by Github action from ${{ github.event.issue.number }}"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
