--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,6 +17,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ES6",
+    "typeRoots": ["./node_modules/@types", "./_types/declarations"],
     "plugins": [
       {
         "name": "next"
