--- a/backend-mock/package.json
+++ b/backend-mock/package.json
@@ -19,10 +19,12 @@
       "jsonwebtoken": "^9.0.2",
       "reflect-metadata": "^0.1.13",
       "sqlite3": "^5.0.2",
+      "ts-node-dev": "^2.0.0",
       "typeorm": "0.3.20"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "dev": "ts-node-dev src/index.ts"
    }
 }
