--- a/backend-mock/package.json
+++ b/backend-mock/package.json
@@ -15,6 +15,7 @@
       "bcrypt": "^5.1.1",
       "dotenv": "^16.4.5",
       "express": "^4.19.2",
+      "express-async-errors": "^3.1.1",
       "fs": "^0.0.1-security",
       "jsonwebtoken": "^9.0.2",
       "reflect-metadata": "^0.1.13",
