prettier update with prettierrc local config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -101,6 +101,9 @@ repos:
         # files: 'frontend/.*'
         args:
           [
+            # ⚠️ If you modify any of these values
+            # make sure to update the .prettierrc file as well
+            # to keep the configuration consistent ⚠️
             '--use-tabs',
             '--tab-width',
             '2',
